...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/history_background"
    android:id="@+id/recId"
    tools:context=".AllHistory">

    <ImageView
        android:id="@+id/imageBackButton"
        android:layout_width="34dp"
        android:layout_height="34dp"
...
